2011-10-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-78
	* Fix bug75952: Add StopEditing functionality to TreeTable Class
	* Refresh paths and sequences top nodes in the TreeModel when 
	  a module name is changed. bug 83721.

2011-10-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-77
	* Fix ClassCastException occurred when opening streams and its content.
	* Update Unassigned Paths list in Streams when a Path is added.

2011-10-12 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-76
	* Add the new path to the smart prescaler immediately when inserting
	  a path in streams. (bug 86605).

2011-08-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-75
	* Add new tab in right lower panel with a list of Paths containing 
	  the current sequence or module.
	* Make the Path list tab browsable to expand the selected path.
	* Make the "unresolved input tags" tab browsable to expand the selected module.
	
2011-08-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-74
	* Change to TNSname connection string for Oracle connections. bug 86323.

2011-08-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-73
	* Allows "DeepImport" when filtering the import list. (bug 84122).
	* Adds "import all" feature for filtered configurations. (bug 84123).
	  If a filter is applied to the source configuration, only the resulting
	  items will be imported.
	  Available for Path, Sequences, EDSources, ESSources, ESModules and Services.
	  Also available for "Update all Modules".
	
2011-08-12 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-72
	* Add some improvements to Deep Import analysis.
	* Add a partial copy method for configurations. 
		Create temporary configurations for comparisons.
	* Add some Diff methods to compare Path/Sequences ignoring Streams.
	
2011-08-11 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>